--- a/NotFound.html
+++ b/NotFound.html
@@ -1,67 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <title>PAGE NOT FOUND</title>
-        <meta name="description" content="error page 404, not found" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link
-            rel="shortcut icon"
-            href="../public/image/icons8-dashboard-32.png"
-            type="image/x-icon"
-        />
-        <link rel="stylesheet" href="css/style.css" />
-    </head>
+	<head>
+		<meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<title>PAGE NOT FOUND</title>
+		<meta name="description" content="error page 404, not found" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link
+			rel="shortcut icon"
+			href="image/icons8-dashboard-32.png"
+			type="image/x-icon"
+		/>
+		<link rel="stylesheet" href="css/style.css" />
+	</head>
 
-    <body>
-        <main class="errorMain">
-            <div class="container">
-                <div class="svgBox">
-                    <svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        viewBox="0 0 1440 320"
-                    >
-                        <path
-                            fill="#030c30"
-                            fill-opacity="1"
-                            d="M0,32L15,42.7C30,53,60,75,90,74.7C120,75,150,53,180,80C210,107,240,181,270,192C300,203,330,149,360,133.3C390,117,420,139,450,160C480,181,510,203,540,181.3C570,160,600,96,630,112C660,128,690,224,720,245.3C750,267,780,213,810,186.7C840,160,870,160,900,160C930,160,960,160,990,176C1020,192,1050,224,1080,202.7C1110,181,1140,107,1170,106.7C1200,107,1230,181,1260,224C1290,267,1320,277,1350,261.3C1380,245,1410,203,1425,181.3L1440,160L1440,320L1425,320C1410,320,1380,320,1350,320C1320,320,1290,320,1260,320C1230,320,1200,320,1170,320C1140,320,1110,320,1080,320C1050,320,1020,320,990,320C960,320,930,320,900,320C870,320,840,320,810,320C780,320,750,320,720,320C690,320,660,320,630,320C600,320,570,320,540,320C510,320,480,320,450,320C420,320,390,320,360,320C330,320,300,320,270,320C240,320,210,320,180,320C150,320,120,320,90,320C60,320,30,320,15,320L0,320Z"
-                        ></path>
-                    </svg>
-                </div>
-                <div class="errorNotFound dark-bg030c30">
-                    <h1>404</h1>
-                    <h3>Not Found</h3>
-                    <button
-                        style="
-                            background-color: #ffffff;
-                            color: #030c30;
-                            padding: 0.5em 1.3em;
-                            font-weight: bold;
-                            font-size: 0.5em;
-                        "
-                    id="homepage">
-                        Back To Homepage
-                    </button>
-                    <script>
-                        document.getElementById("homepage").addEventListener('click', ()=>{
-                            location.href = "/"
-                        })
-                    </script>
-                </div>
-                <div class="top-svg">
-                    <svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        viewBox="0 0 1440 320"
-                    >
-                        <path
-                            fill="#030c30"
-                            fill-opacity="1"
-                            d="M0,32L15,42.7C30,53,60,75,90,74.7C120,75,150,53,180,80C210,107,240,181,270,192C300,203,330,149,360,133.3C390,117,420,139,450,160C480,181,510,203,540,181.3C570,160,600,96,630,112C660,128,690,224,720,245.3C750,267,780,213,810,186.7C840,160,870,160,900,160C930,160,960,160,990,176C1020,192,1050,224,1080,202.7C1110,181,1140,107,1170,106.7C1200,107,1230,181,1260,224C1290,267,1320,277,1350,261.3C1380,245,1410,203,1425,181.3L1440,160L1440,0L1425,0C1410,0,1380,0,1350,0C1320,0,1290,0,1260,0C1230,0,1200,0,1170,0C1140,0,1110,0,1080,0C1050,0,1020,0,990,0C960,0,930,0,900,0C870,0,840,0,810,0C780,0,750,0,720,0C690,0,660,0,630,0C600,0,570,0,540,0C510,0,480,0,450,0C420,0,390,0,360,0C330,0,300,0,270,0C240,0,210,0,180,0C150,0,120,0,90,0C60,0,30,0,15,0L0,0Z"
-                        ></path>
-                    </svg>
-                </div>
-            </div>
-        </main>
-    </body>
+	<body>
+		<main class="errorMain">
+			<div class="container">
+				<div class="svgBox">
+					<svg
+						xmlns="http://www.w3.org/2000/svg"
+						viewBox="0 0 1440 320"
+					>
+						<path
+							fill="#030c30"
+							fill-opacity="1"
+							d="M0,32L15,42.7C30,53,60,75,90,74.7C120,75,150,53,180,80C210,107,240,181,270,192C300,203,330,149,360,133.3C390,117,420,139,450,160C480,181,510,203,540,181.3C570,160,600,96,630,112C660,128,690,224,720,245.3C750,267,780,213,810,186.7C840,160,870,160,900,160C930,160,960,160,990,176C1020,192,1050,224,1080,202.7C1110,181,1140,107,1170,106.7C1200,107,1230,181,1260,224C1290,267,1320,277,1350,261.3C1380,245,1410,203,1425,181.3L1440,160L1440,320L1425,320C1410,320,1380,320,1350,320C1320,320,1290,320,1260,320C1230,320,1200,320,1170,320C1140,320,1110,320,1080,320C1050,320,1020,320,990,320C960,320,930,320,900,320C870,320,840,320,810,320C780,320,750,320,720,320C690,320,660,320,630,320C600,320,570,320,540,320C510,320,480,320,450,320C420,320,390,320,360,320C330,320,300,320,270,320C240,320,210,320,180,320C150,320,120,320,90,320C60,320,30,320,15,320L0,320Z"
+						></path>
+					</svg>
+				</div>
+				<div class="errorNotFound dark-bg030c30">
+					<h1>404</h1>
+					<h3>Not Found</h3>
+					<button
+						style="
+							background-color: #ffffff;
+							color: #030c30;
+							padding: 0.5em 1.3em;
+							font-weight: bold;
+							font-size: 0.5em;
+						"
+						id="homepage"
+					>
+						Back To Homepage
+					</button>
+					<script>
+						document
+							.getElementById("homepage")
+							.addEventListener("click", () => {
+								location.href = "/";
+							});
+					</script>
+				</div>
+				<div class="top-svg">
+					<svg
+						xmlns="http://www.w3.org/2000/svg"
+						viewBox="0 0 1440 320"
+					>
+						<path
+							fill="#030c30"
+							fill-opacity="1"
+							d="M0,32L15,42.7C30,53,60,75,90,74.7C120,75,150,53,180,80C210,107,240,181,270,192C300,203,330,149,360,133.3C390,117,420,139,450,160C480,181,510,203,540,181.3C570,160,600,96,630,112C660,128,690,224,720,245.3C750,267,780,213,810,186.7C840,160,870,160,900,160C930,160,960,160,990,176C1020,192,1050,224,1080,202.7C1110,181,1140,107,1170,106.7C1200,107,1230,181,1260,224C1290,267,1320,277,1350,261.3C1380,245,1410,203,1425,181.3L1440,160L1440,0L1425,0C1410,0,1380,0,1350,0C1320,0,1290,0,1260,0C1230,0,1200,0,1170,0C1140,0,1110,0,1080,0C1050,0,1020,0,990,0C960,0,930,0,900,0C870,0,840,0,810,0C780,0,750,0,720,0C690,0,660,0,630,0C600,0,570,0,540,0C510,0,480,0,450,0C420,0,390,0,360,0C330,0,300,0,270,0C240,0,210,0,180,0C150,0,120,0,90,0C60,0,30,0,15,0L0,0Z"
+						></path>
+					</svg>
+				</div>
+			</div>
+		</main>
+	</body>
 </html>
