--- a/login.html
+++ b/login.html
@@ -121,25 +121,6 @@
 							</ul>
 						</div>
 					</div>
-					<div>
-						<h4>Company</h4>
-						<ul>
-							<li><a href="/">Home</a></li>
-							<li><a href="login.html">Login</a></li>
-							<li><a href="register.html">Register</a></li>
-							<li><a href="tel:+2347034797467">Contact us</a></li>
-						</ul>
-					</div>
-					<div>
-						<h4>services</h4>
-						<ul>
-							<li>creating responsive dashboards</li>
-							<li>keeping users security tight</li>
-							<li>caring for user opinion</li>
-							<li>stable database system</li>
-							<li>simple and understanding user interface</li>
-						</ul>
-					</div>
 					<div class="contact-methods">
 						<h4>Contact</h4>
 						<ul>
@@ -151,7 +132,11 @@
 							<li>
 								<a href="tel:+2347034797467">2347034797467</a>
 							</li>
-							<li><a href="/">www.justme.com</a></li>
+							<li>
+								<a href="https://dans33-portfolio.netlify.app"
+									>My Portfoilio</a
+								>
+							</li>
 							<li>News City, London</li>
 						</ul>
 					</div>
@@ -164,7 +149,6 @@
 			integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM="
 			crossorigin="anonymous"
 		></script>
-		<script src="javascript/page-scroll-fixed.js" defer></script>
-		<script src="javascript/i-app.js" defer></script>
+		<script src="javascript/page-scroll-fixed.js"></script>
 	</body>
 </html>
